src/test/deca/syntax/valid/added/or.deca
// Description:
// syntaxe correcte du or 
//
//
// Historique:
//    cree le 21/01/2024

{   
    int x=1;
    if (x==1 || x==2){
        print("OK");
    }
}